# build-oiio

./: .gitignore  CMakeLists.txt
in/: boost_configure.in  clean_external_libs.bash.in  generic_wrapper.in  jasper_configure.in  jbigkit_install.in  jbigkit_make.in  lcms2_configure.in  libraw_configure.in  libtiff_configure.in  update_runpaths.cmake.in  wrap_executable.cmake.in
patches/: jbigkit-2.1.patch  libraw-0.17.2.patch  ocio-1.0.9.patch  oiio-1.6.18.patch  ptex-2.1.28.patch
